# math-thing

./: Cargo.toml  README.md  example.html
demo/: package.json  pnpm-lock.yaml
demo/src/: app.css  app.tsx  index.css
src/: add.rs  annotated_expression.rs  constant.rs  expression.rs  main.rs  multiply.rs  negation.rs  product.rs  step.rs  subtract.rs  sum.rs  token_stream.rs  traversable.rs  traverse.rs
src/simplify/: excess_parens.rs  mod.rs  unused_parens.rs
