[package]
name = "math-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katex = { version = "0.4.5", features = ["duktape"], default-features = false }

[dev-dependencies]
insta = "1.21.1"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
